--- a/src/main/resources/ua/rupert/messenger/fxml/Login.fxml
+++ b/src/main/resources/ua/rupert/messenger/fxml/Login.fxml
@@ -12,14 +12,14 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" pickOnBounds="false" prefHeight="650.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ua.rupert.messenger.controller.LoginController">
    <center>
-      <StackPane prefHeight="150.0" prefWidth="200.0" style="-fx-background-color: #17212b;" BorderPane.alignment="CENTER">
+      <StackPane pickOnBounds="false" prefHeight="150.0" prefWidth="200.0" style="-fx-background-color: #17212b;" BorderPane.alignment="CENTER">
          <children>
             <Pane maxHeight="600.0" maxWidth="600.0">
                <children>
-                  <TextField layoutX="100.0" layoutY="182.0" minHeight="30.0" minWidth="400.0" style="-fx-background-radius: 7; -fx-background-color: #242f3d; -fx-border-color: #a4a3a8; -fx-border-radius: 7;" />
-                  <Button layoutX="100.0" layoutY="381.0" minHeight="35.0" minWidth="400.0" mnemonicParsing="false" style="-fx-background-color: #9dc7f1; -fx-background-radius: 7;" text="Sign in">
+                  <TextField fx:id="usernameField" layoutX="100.0" layoutY="182.0" minHeight="30.0" minWidth="400.0" style="-fx-background-radius: 7; -fx-background-color: #242f3d; -fx-border-color: #a4a3a8; -fx-border-radius: 7;" />
+                  <Button fx:id="loginButton" layoutX="100.0" layoutY="381.0" minHeight="35.0" minWidth="400.0" mnemonicParsing="false" style="-fx-background-color: #9dc7f1; -fx-background-radius: 7;" text="Sign in">
                      <font>
                         <Font size="16.0" />
                      </font>
@@ -29,13 +29,13 @@
                         <Font name="System Bold" size="16.0" />
                      </font>
                   </Label>
-                  <TextField layoutX="100.0" layoutY="273.0" minHeight="30.0" minWidth="400.0" style="-fx-background-radius: 7; -fx-background-color: #242f3d; -fx-border-color: #a4a3a8; -fx-border-radius: 7;" />
+                  <TextField fx:id="passwordField" layoutX="100.0" layoutY="273.0" minHeight="30.0" minWidth="400.0" style="-fx-background-radius: 7; -fx-background-color: #242f3d; -fx-border-color: #a4a3a8; -fx-border-radius: 7;" />
                   <Label layoutX="100.0" layoutY="240.0" text="Password" textFill="#ececef">
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font>
                   </Label>
-                  <Label layoutX="327.0" layoutY="314.0" text="Forgot your password?" textFill="#9dc7f1">
+                  <Label fx:id="forgotPasswordLabel" layoutX="327.0" layoutY="314.0" text="Forgot your password?" textFill="#9dc7f1">
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font>
@@ -45,7 +45,7 @@
                         <Font name="System Bold" size="16.0" />
                      </font>
                   </Label>
-                  <Label layoutX="348.0" layoutY="430.0" text=" Register now" textFill="#9dc7f1">
+                  <Label fx:id="RegisterLabel" layoutX="348.0" layoutY="430.0" onMouseClicked="#toRegisterScreen" text=" Register now" textFill="#9dc7f1">
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font>
@@ -56,7 +56,7 @@
                         <Font name="System Bold" size="16.0" />
                      </font>
                   </Label>
-                  <Button layoutX="100.0" layoutY="510.0" minHeight="35.0" minWidth="400.0" mnemonicParsing="false" style="-fx-background-color: #615f64; -fx-background-radius: 7;" text="Google" textFill="#ececef">
+                  <Button fx:id="loginGoogleButton" layoutX="100.0" layoutY="510.0" minHeight="35.0" minWidth="400.0" mnemonicParsing="false" style="-fx-background-color: #615f64; -fx-background-radius: 7;" text="Google" textFill="#ececef">
                      <font>
                         <Font size="16.0" />
                      </font>
@@ -74,7 +74,7 @@
                         <Font name="System Bold" size="20.0" />
                      </font>
                   </Label>
-                  <RadioButton accessibleRole="BUTTON" layoutX="100.0" layoutY="347.0" mnemonicParsing="false" style="-fx-background-radius: 0; -fx-border-radius: 10;" stylesheets="@../css/square-radio.css" />
+                  <RadioButton fx:id="RememberRadioButton" accessibleRole="BUTTON" layoutX="100.0" layoutY="347.0" mnemonicParsing="false" style="-fx-background-radius: 0; -fx-border-radius: 10;" stylesheets="@../css/square-radio.css" />
                   <Label layoutX="127.0" layoutY="344.0" text="Remember me" textFill="#ececef">
                      <font>
                         <Font name="System Bold" size="16.0" />
@@ -93,7 +93,7 @@
    <top>
       <HBox alignment="TOP_RIGHT" maxHeight="23.0" minHeight="23.0" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #242f3d;" BorderPane.alignment="CENTER">
          <children>
-            <Button maxHeight="22.0" maxWidth="40.0" minHeight="22.0" minWidth="40.0" mnemonicParsing="false" style="-fx-background-color: #242f3d;">
+            <Button fx:id="minimizeButton" maxHeight="22.0" maxWidth="40.0" minHeight="22.0" minWidth="40.0" mnemonicParsing="false" style="-fx-background-color: #242f3d;">
                <graphic>
                   <ImageView fitHeight="15.0" fitWidth="15.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -102,7 +102,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button maxHeight="22.0" maxWidth="40.0" minHeight="22.0" minWidth="40.0" mnemonicParsing="false" style="-fx-background-color: #242f3d;">
+            <Button fx:id="fullButton" maxHeight="22.0" maxWidth="40.0" minHeight="22.0" minWidth="40.0" mnemonicParsing="false" style="-fx-background-color: #242f3d;">
                <graphic>
                   <ImageView fitHeight="15.0" fitWidth="15.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -111,7 +111,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button maxHeight="22.0" maxWidth="40.0" minHeight="22.0" minWidth="40.0" mnemonicParsing="false" style="-fx-background-color: #242f3d;">
+            <Button fx:id="closeButton" maxHeight="22.0" maxWidth="40.0" minHeight="22.0" minWidth="40.0" mnemonicParsing="false" style="-fx-background-color: #242f3d;">
                <graphic>
                   <ImageView fitHeight="15.0" fitWidth="15.0" pickOnBounds="true" preserveRatio="true">
                      <image>
